# Ibili

./: .env.example  .gitignore  README.md  validation_data.json
.codex/environments/: environment.toml
.github/workflows/: build-unsigned-ipa.yml
core/rust/: Cargo.toml
core/rust/crates/ibili_core/: Cargo.toml
core/rust/crates/ibili_core/src/: anime.rs  article.rs  auth.rs  cdn.rs  danmaku.rs  dto.rs  dynamic.rs  error.rs  feed.rs  http.rs  interaction.rs  lib.rs  live.rs  message.rs  packaging.rs  reply.rs  search.rs  session.rs  signer.rs  user_space.rs  video.rs
core/rust/crates/ibili_core/tests/: unit.rs
core/rust/crates/ibili_ffi/: Cargo.toml
docs/: README.md  ios-avplayer-offline-packaging-validation.md  ios-avplayer-packaging-implementation-design.md  ios-native-development-guide.md  ios-remux-fallback-debug-notes.md  ios-ui-components.md  ios-workspace-architecture.md  rust-core-swift-bridge-interface-design.md  telegram-ios-architecture-study.md  upstream-sync-implementation.md
ios-app/: project.yml
ios-app/IbiliApp/: Info.plist
ios-app/IbiliApp/Sources/App/: AppSession.swift  AppSettings.swift  BangumiOAuthConfig.swift  DeepLinkNavigationPathCoordinator.swift  DeepLinkRouter.swift  IbiliApp.swift  LinkRouter.swift  RootView.swift  (+4 more)
ios-app/IbiliApp/Tests/: DanmakuFrameRateTests.swift  DeepLinkNavigationTests.swift  HLSPlaylistBuilderTests.swift  HomeFeedGridLayoutTests.swift  ISOBMFFParserTests.swift  PlayerPageLayoutTests.swift  SearchViewModelTests.swift  StablePagedStoreTests.swift
tools/: build_rust_xcframework.sh  build_unsigned_ipa.sh
(+162 files in other folders)
