[package]
name = "ibili_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls", "cookies", "gzip", "http2", "charset"] }
md-5 = "0.10"
hex = "0.4"
url = "2"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
flate2 = "1"
quick-xml = "0.36"
regex = "1"
prost = "0.13"
crc32fast = "1"
